<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="507dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:id="@+id/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="97dp"
        android:text="@string/next"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingLeft="125dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/background_button"

        android:drawableEnd="@drawable/arrow"

        android:paddingEnd="100dp"
        android:drawablePadding="11dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <EditText
        android:id="@+id/EmailField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/email"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="325dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/mail"
        android:paddingEnd="18dp"

        />

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/lock"
        android:paddingRight="18dp"
        />

    <TextView
        android:id="@+id/WelcomeBack"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/welcome"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="195dp"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        />

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:textSize="14sp"
        android:layout_marginTop="225dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        />

    <TextView
        android:id="@+id/Forget"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/forget"
        android:textStyle="normal"
        android:textSize="9sp"
        android:textColor="#6C63FF"
        android:layout_marginTop="467dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="219dp"
        />

    <TextView
        android:id="@+id/Remember"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/remember"
        android:textStyle="normal"
        android:textSize="9sp"
        android:layout_marginTop="467dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="17dp"
        />

    <TextView
        android:id="@+id/New"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/newmember"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="13sp"
        android:layout_marginBottom="58dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="43dp"
        android:gravity="bottom"
        />

    <TextView
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/register"
        android:textColor="#6C63FF"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="13sp"
        android:layout_marginBottom="58dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="144dp"
        android:gravity="bottom"
        />


        <CheckBox android:id="@+id/checkbox_"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:backgroundTint="#CBCBCB"
            app:layout_constraintLeft_toLeftOf="@+id/EmailField"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="465dp"
            />

</androidx.constraintlayout.widget.ConstraintLayout>