<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img"
        android:layout_marginStart="62dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="524dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:id="@+id/NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="75dp"
        android:text="@string/next"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="125dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/background_button"

        android:drawableEnd="@drawable/arrow"

        android:paddingRight="100dp"
        android:drawablePadding="11dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/NameField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/fullname"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/user"
        android:paddingEnd="18dp"
        />

    <EditText
        android:id="@+id/EmailField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/validemail"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="339dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/mail"
        android:paddingEnd="18dp"
        />

    <EditText
        android:id="@+id/PhoneField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/phone"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="408dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/smartphone"
        android:paddingEnd="18dp"
        />

    <EditText
        android:id="@+id/PasswordField"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/strong"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="#7E7E7E"
        android:textSize="14sp"
        android:paddingStart="22dp"
        android:layout_marginTop="477dp"
        android:background="@drawable/email_field"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:drawableEnd="@drawable/lock"
        android:paddingEnd="18dp"
        />

    <TextView
        android:id="@+id/GetStarted"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/start"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="44sp"
        android:layout_marginTop="165dp"
        android:layout_marginStart="22dp"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        />

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/freeacc"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_light"
        android:textSize="14sp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        />

    <TextView
        android:id="@+id/Remember"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/terms"
        android:textStyle="normal"
        android:textSize="9sp"
        android:layout_marginTop="550dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/Member"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/already"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="13sp"
        android:layout_marginBottom="41dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="53dp"
        android:gravity="bottom"
        />

    <TextView
        android:id="@+id/LogIn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/login"
        android:textColor="#6C63FF"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="13sp"
        android:layout_marginBottom="41dp"
        app:layout_constraintRight_toRightOf="@+id/EmailField"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        android:layout_marginStart="187dp"
        android:gravity="bottom"
        />


    <CheckBox android:id="@+id/checkbox_"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:backgroundTint="#CBCBCB"
        app:layout_constraintLeft_toLeftOf="@+id/EmailField"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>