<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/img"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_button"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/background_button"
        android:drawableEnd="@drawable/arrow"
        android:drawablePadding="11dp"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingStart="125dp"
        android:paddingEnd="100dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        style="@style/OnboardingInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="95dp"
        android:hint="@string/email"
        app:boxBackgroundColor="#EEEEEE"
        app:endIconDrawable="@drawable/ic_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        style="@style/OnboardingInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        app:boxBackgroundColor="#EEEEEE"
        app:endIconDrawable="@drawable/ic_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/signin"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/img_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="6dp"
        android:text="@string/forget"
        android:textColor="#6C63FF"
        android:textSize="9sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@id/password_field"
        app:layout_constraintTop_toBottomOf="@id/password_field" />

    <TextView
        android:id="@+id/new_m"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="bottom"
        android:text="@string/newmember"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/register"
        app:layout_constraintLeft_toLeftOf="@+id/next_button" />

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="58dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="bottom"
        android:text="@string/register"
        android:textColor="#6C63FF"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/next_button" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textSize="9sp"
        app:layout_constraintLeft_toLeftOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />


</androidx.constraintlayout.widget.ConstraintLayout>